[package]
name = "rill-adrift"
version = "0.5.0-beta.6"
edition = "2021"
description = "Umbrella crate re-exporting all rill crates for signal processing application development"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-adrift"

[dev-dependencies]
parking_lot = "0.12"
hound = "3.5"

[dependencies]
rill-core = { workspace = true }
rill-core-actor = { workspace = true }
rill-core-dsp = { workspace = true }
rill-graph = { workspace = true }
rill-oscillators = { workspace = true }
rill-digital-filters = { workspace = true }
rill-digital-effects = { workspace = true }
rill-router = { workspace = true }
rill-patchbay = { workspace = true }

# Dependencies for Runtime (always needed)
log = "0.4"

# Optional (feature-gated)
rill-io = { workspace = true, optional = true }
rill-lofi = { workspace = true, optional = true }
rill-telemetry = { workspace = true, optional = true }
rill-osc = { workspace = true, optional = true }
rill-core-model = { workspace = true, optional = true }
rill-analog-filters = { workspace = true, optional = true }
rill-analog-effects = { workspace = true, optional = true }
rill-sampler = { workspace = true, optional = true }

# Runtime sub-dependencies (feature gates match the consuming module)
tokio = { workspace = true, optional = true, features = ["signal", "rt", "rt-multi-thread", "macros"] }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[[example]]
name = "play_wav"
required-features = ["io", "sampler"]

[[example]]
name = "player"
required-features = ["serialization", "sampler"]

[[example]]
name = "record_mic"
required-features = ["io", "serialization", "sampler"]

[[example]]
name = "chiptune"
required-features = ["io", "lofi"]

[[example]]
name = "midi_synth"
required-features = ["midi", "io"]

[[example]]
name = "midi_synth_serial"
required-features = ["midi", "io", "serialization"]

[features]
default = ["io", "lofi", "telemetry", "osc", "sampler", "portaudio", "serialization"]

io = ["dep:rill-io"]
lofi = ["dep:rill-lofi"]
telemetry = ["dep:rill-telemetry"]
osc = ["dep:rill-osc", "dep:tokio", "rill-patchbay/osc"]
analog = ["dep:rill-core-model", "dep:rill-analog-filters", "dep:rill-analog-effects"]
sampler = ["dep:rill-sampler"]
serialization = [
    "rill-graph/serialization",
    "rill-patchbay/serialization",
    "dep:serde",
    "dep:serde_json",
    "dep:toml",
    "dep:tokio",
]


# I/O backend passthrough
alsa = ["rill-io/alsa"]
portaudio = ["rill-io/portaudio"]
jack = ["rill-io/jack"]
pipewire = ["rill-io/pipewire"]

# MIDI
midi = ["rill-patchbay/midi", "rill-io/midir", "io"]

