[package]
name = "rill-adrift"
version = "0.5.0"
edition = "2021"
description = "Umbrella crate re-exporting all rill crates for signal processing application development"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-adrift"

[dev-dependencies]
parking_lot = "0.12"
hound = "3.5"
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "lang_dsp_bench"
harness = false
path = "benches/lang_dsp_bench.rs"

[dependencies]
rill-core = { workspace = true }
rill-core-actor = { workspace = true }
rill-core-dsp = { workspace = true }
rill-graph = { workspace = true }
rill-digital-filters = { workspace = true, features = ["graph"] }
rill-digital-effects = { workspace = true, features = ["graph"] }
rill-router = { workspace = true, features = ["graph", "lang"] }
rill-patchbay = { workspace = true }
dashmap = { version = "6", optional = true }

# Dependencies for Runtime (always needed)
log = "0.4"

# Optional (feature-gated)
rill-io = { workspace = true, optional = true }
rill-lofi = { workspace = true, optional = true }
rill-telemetry = { workspace = true, optional = true }
rill-osc = { workspace = true, optional = true }
rill-core-model = { workspace = true, optional = true }
rill-analog-filters = { workspace = true, optional = true }
rill-analog-effects = { workspace = true, optional = true }
rill-sampler = { workspace = true, optional = true }
rill-lang = { workspace = true, features = ["router"] }
rill-fft = { workspace = true, optional = true }

# Runtime sub-dependencies (feature gates match the consuming module)
tokio = { workspace = true, optional = true, features = ["signal", "rt", "rt-multi-thread", "macros"] }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

[[example]]
name = "play_wav"
required-features = ["io", "sampler"]

[[example]]
name = "player"
required-features = ["io", "serialization"]


[[example]]
name = "record_mic"
required-features = ["io", "sampler"]


[[example]]
name = "complex_dsl"

[[example]]
name = "spectral_effects"
required-features = ["fft"]

[[example]]
name = "dsl_spectral"
required-features = ["fft"]





[features]
default = ["io", "lofi", "telemetry", "osc", "sampler", "fft", "portaudio", "serialization"]

io = ["dep:rill-io"]
lofi = ["dep:rill-lofi", "rill-lofi/graph", "rill-lofi/lang"]
telemetry = ["dep:rill-telemetry"]
debug = ["telemetry", "rill-telemetry/debug", "rill-patchbay/debug", "rill-graph/debug", "rill-lang/debug", "dep:dashmap"]
osc = ["dep:rill-osc", "dep:tokio", "rill-patchbay/osc"]
analog = ["dep:rill-core-model", "dep:rill-analog-filters", "dep:rill-analog-effects", "rill-analog-filters/graph", "rill-analog-effects/graph", "rill-core-model/lang", "rill-analog-effects/lang"]
sampler = ["dep:rill-sampler", "rill-sampler/graph", "rill-sampler/lang"]
fft = ["dep:rill-fft", "rill-fft/graph", "rill-fft/lang"]
serialization = [
    "rill-graph/serialization",
    "rill-patchbay/serialization",
    "dep:serde",
    "dep:serde_json",
    "dep:toml",
    "dep:tokio",
]


# I/O backend passthrough
alsa = ["rill-io/alsa"]
portaudio = ["rill-io/portaudio"]
jack = ["rill-io/jack"]
pipewire = ["rill-io/pipewire"]

# MIDI
midi = ["rill-patchbay/midi", "rill-io/midir", "io"]


[[example]]
name = "chiptune_stc"
required-features = ["io", "lofi", "serialization"]

[[example]]
name = "lang_chiptune"
required-features = ["io", "lofi", "serialization"]
