[package]
name = "rill-analog-effects"
version = "0.5.0"
edition = "2021"
description = "Analog circuit models: op-amps, tape decks, preamps"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-analog-effects"

[dependencies]
rill-core = { workspace = true }
rill-core-model = { workspace = true }
rand = { workspace = true }

[features]
default = []
