[package]
name = "rill-analog-effects"
version = "0.6.0-M1"
edition = "2021"
description = "Analog circuit models: op-amps, tape decks, preamps"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-analog-effects"

[dependencies]
rill-core = { workspace = true }
rill-core-model = { workspace = true }
rill-graph = { workspace = true, optional = true }
rill-lang = { workspace = true, optional = true }
rand = { workspace = true }

[features]
default = []
graph = ["rill-graph"]
lang = ["rill-lang"]
