[package]
name = "rill-analog-filters"
version = "0.5.0-beta.3"
edition = "2021"
description = "Analog-modeled filters using Wave Digital Filter elements"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-analog-filters"

[dependencies]
rill-core = { workspace = true }
rill-core-wdf = { workspace = true }

[features]
default = []
