[package]
name = "rill-analyzer"
version = "0.5.0"
edition = "2021"
description = "Interactive debugger and analyzer for Rill signal graphs"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-analyzer"

[dependencies]
rill-core = { workspace = true }
rill-lang = { workspace = true, features = ["debug"] }
rill-graph = { workspace = true, features = ["serialization"] }
rill-telemetry = { workspace = true, features = ["debug"] }
dashmap = "6"
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mlua = { version = "0.10", features = ["lua54"] }
