[package]
name = "rill-core-actor"
version = "0.6.0-M1"
edition = "2021"
description = "Actor model infrastructure for the Rill ecosystem"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rill-core-actor"

[dependencies]
rill-core = { workspace = true }
tokio = { version = "1.0", optional = true, features = ["time", "rt"] }

[features]
default = []
tokio = ["dep:tokio"]
